<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of books -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#2B3D4D"
        tools:text="Title of hte Book" />

    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_label"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#AEB6BD"
        app:layout_constraintTop_toBottomOf="@id/book_title" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_title"
        android:layout_alignBaseline="@id/price"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginLeft="@dimen/view_margin"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#AEB6BD"
        app:layout_constraintLeft_toRightOf="@id/price_label"
        app:layout_constraintTop_toBottomOf="@id/book_title"
        tools:text="13.99" />

    <TextView
        android:id="@+id/quantity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_label"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#AEB6BD"
        app:layout_constraintRight_toLeftOf="@id/quantity"
        app:layout_constraintTop_toBottomOf="@id/book_title" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginLeft="@dimen/view_margin"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#AEB6BD"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_title"
        tools:text="10" />

    <Button
        android:id="@+id/buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/buy_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity" />
</android.support.constraint.ConstraintLayout>